Add dataframe auto scaling example

--- a/advanced/Preprocessing.ipynb
+++ b/advanced/Preprocessing.ipynb
@@ -289,6 +289,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "データフレームを引数に与えてセンタリングやスケーリングをしても返り値はNumpyの`Array型`になるのに注意する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "各説明変数の平均を求めてみる。"
    ]
   },
@@ -1208,6 +1215,239 @@
    "source": [
     "今回のようにデータを分割し、片方の平均値や分散を考慮してもう片方もオートスケーリングする必要がある場合は  \n",
     "`StandardScaler`が適していると言える。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. データフレームのままオートスケーリングする"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "データフレームを引数に与えてセンタリングやスケーリングをしても返り値はNumpyの`Array`型になってしまうと、  \n",
+    "再びデータフレームに戻したり、カラムの名前がなくなってしまうのが不便な時がある。  \n",
+    "以下の方法でオートスケーリングするとデータフレームのまま行うことができる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                5.1               3.5                1.4               0.2\n",
+       "1                4.9               3.0                1.4               0.2\n",
+       "2                4.7               3.2                1.3               0.2\n",
+       "3                4.6               3.1                1.5               0.2\n",
+       "4                5.0               3.6                1.4               0.2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.897674</td>\n",
+       "      <td>1.028611</td>\n",
+       "      <td>-1.336794</td>\n",
+       "      <td>-1.308593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.139200</td>\n",
+       "      <td>-0.124540</td>\n",
+       "      <td>-1.336794</td>\n",
+       "      <td>-1.308593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.380727</td>\n",
+       "      <td>0.336720</td>\n",
+       "      <td>-1.393470</td>\n",
+       "      <td>-1.308593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.501490</td>\n",
+       "      <td>0.106090</td>\n",
+       "      <td>-1.280118</td>\n",
+       "      <td>-1.308593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.018437</td>\n",
+       "      <td>1.259242</td>\n",
+       "      <td>-1.336794</td>\n",
+       "      <td>-1.308593</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0          -0.897674          1.028611          -1.336794         -1.308593\n",
+       "1          -1.139200         -0.124540          -1.336794         -1.308593\n",
+       "2          -1.380727          0.336720          -1.393470         -1.308593\n",
+       "3          -1.501490          0.106090          -1.280118         -1.308593\n",
+       "4          -1.018437          1.259242          -1.336794         -1.308593"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scaled = (X - X.mean()) / X.std(ddof=1)\n",
+    "X_scaled.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sepal length (cm)   -1.457168e-15\n",
+       "sepal width (cm)    -1.722511e-15\n",
+       "petal length (cm)   -2.043551e-15\n",
+       "petal width (cm)    -9.843977e-17\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scaled.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sepal length (cm)    1.0\n",
+       "sepal width (cm)     1.0\n",
+       "petal length (cm)    1.0\n",
+       "petal width (cm)     1.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scaled.std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "平均はほぼ0、分散は1になっていることが確認できる。"
    ]
   }
  ],
